Fixed ProjectListItem center align issue

--- a/frontend/src/components/ProjectListItem/ProjectListItem.css
+++ b/frontend/src/components/ProjectListItem/ProjectListItem.css
@@ -1,8 +1,8 @@
 .ProjectListItem {
   margin-top: 50px;
   margin-bottom: 50px;
-  margin-right: 100px;
-  margin-left: 100px;
+  margin-left: auto;
+  margin-right: auto;
   justify-content: space-around;
 
   padding: 10px;
@@ -14,6 +14,11 @@
 
 .ProjectListItem:hover {
   background-color: #eee;
+}
+
+.project-item-container {
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
 .project-item-link:hover {
